--- a/fashion_gallery/.eslintrc.json
+++ b/fashion_gallery/.eslintrc.json
@@ -4,8 +4,8 @@
       "react/no-unescaped-entities": "off",
       "@next/next/no-page-custom-font": "off",
       "no-unused-vars": "off",
-      "@typescript-eslint/no-unused-vars": "off"
+      "@typescript-eslint/no-unused-vars": "off",
+      "@typescript-eslint/no-explicit-any": "off"  // Add this line to disable the 'no-explicit-any' rule
     }
   }
- 
   
